# mapgen

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
assets/meshes/: dragon.glb  dragon.gltf
assets/shaders/: lambert_material.wgsl  light.wgsl  util.wgsl
src/: main.rs
src/camera/: misc.rs  mod.rs
src/mapgen/: mod.rs  utils.rs  voronoitor.rs
src/renderers/: mod.rs
src/state/: mod.rs
src/ui/: mod.rs
