[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_egui = "0.29.0"
rand = "0.8.5"

# Optimize our code a bit in dev profile
[profile.dev]
opt-level = 1

# Optimize everything else A LOT
[profile.dev.package."*"]
opt-level = 3 
