[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "serialize"] }
bevy_egui = "0.31.0"
serde = "1.0.215"
serde_json = "1.0.133"

# Optimize our code a bit in dev profile
[profile.dev]
opt-level = 1

# Optimize everything else A LOT
[profile.dev.package."*"]
opt-level = 3 
